--- a/frontend/reset-password.html
+++ b/frontend/reset-password.html
@@ -1,89 +1,100 @@
 <!-- reset-password.html -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Reset Password - Ultramarathon Connect</title>
-  <link rel="stylesheet" href="style.css"/>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Reset Password - Ultramarathon Connect</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-  <header class="sticky-header">
-    <div class="logo-container">
-      <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo"/>
-    </div>
-    <nav>
-      <ul class="menu">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="race_directory.html">Race Directory</a></li>
-        <li><a href="forum.html">Runner Community</a></li>
-        <li id="account-tab" class="auth-tab"></li>
-      </ul>
-    </nav>
-  </header>
+    <header class="sticky-header">
+        <div class="logo-container">
+            <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo" />
+        </div>
+        <nav>
+            <ul class="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="race_directory.html">Race Directory</a></li>
+                <li><a href="forum.html">Runner Community</a></li>
+                <li id="account-tab" class="auth-tab"></li>
+            </ul>
+        </nav>
+    </header>
 
-  <main>
-    <div class="form-container">
-      <div class="form-card">
-        <h2>Change Your Password</h2>
-        <form id="reset-form">
-          <div class="form-group">
-            <label for="password">New Password:</label>
-            <input type="password" id="password" required placeholder="Enter new password" />
-            <small>Password must be at least 6 characters long and include one uppercase letter, one number, and one special character.</small>
-          </div>
-          <button type="submit" class="orange-btn">Update Password</button>
-        </form>
-        <p id="reset-message" class="error-message"></p>
-      </div>
-    </div>
-  </main>
+    <main>
+        <div class="form-container">
+            <div class="form-card">
+                <h2>Change Your Password</h2>
+                <form id="reset-form">
+                    <div class="form-group">
+                        <label for="password">New Password:</label>
+                        <input type="password" id="password" required placeholder="Enter new password" />
+                        <small>Password must be at least 6 characters long and include one uppercase letter, one number,
+                            and one special character.</small>
+                    </div>
+                    <button type="submit" class="orange-btn">Update Password</button>
+                </form>
+                <p id="reset-message" class="error-message"></p>
+            </div>
+        </div>
+    </main>
 
-  <footer class="site-footer">
-    <div class="footer-links">
-      <a href="contact.html">Contact Us</a> |
-      <a href="privacy.html">Privacy Policy</a> |
-      <a href="termsofservice.html">Terms of Service</a> |
-      <a href="faq.html">FAQ</a> |
-      <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
-    </div>
-    <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
-  </footer>
+    <footer class="site-footer">
+        <div class="footer-links">
+            <a href="contact.html">Contact Us</a> |
+            <a href="privacy.html">Privacy Policy</a> |
+            <a href="termsofservice.html">Terms of Service</a> |
+            <a href="faq.html">FAQ</a> |
+            <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
+        </div>
+        <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
+    </footer>
 
-  <script>
-    document.getElementById("reset-form").addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const urlParams = new URLSearchParams(window.location.search);
-      const token = urlParams.get("token");
-      const password = document.getElementById("password").value;
-      const message = document.getElementById("reset-message");
+    <script>
+        document.getElementById("reset-form").addEventListener("submit", async (e) => {
+            e.preventDefault();
+            const urlParams = new URLSearchParams(window.location.search);
+            const token = urlParams.get("token");
+            const password = document.getElementById("password").value;
+            const message = document.getElementById("reset-message");
 
-      const valid = /^(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&#]).{6,}$/.test(password);
-      if (!valid) {
-        message.textContent = "Password does not meet the requirements.";
-        return;
-      }
+            const valid = /^(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&#]).{6,}$/.test(password);
+            if (!valid) {
+                message.textContent = "Password does not meet the requirements.";
+                message.classList.remove("success-message");
+                message.classList.add("error-message");
+                return;
+            }
 
-      try {
-        const response = await fetch("https://ultramarathon-finder-backend.onrender.com/api/auth/reset-password", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ token, newPassword: password })
+            try {
+                const response = await fetch("https://ultramarathon-finder-backend.onrender.com/api/auth/reset-password", {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ token, newPassword: password })
+                });
+
+                const result = await response.json();
+                if (response.ok) {
+                    message.textContent = "Password updated! Redirecting to login...";
+                    message.classList.remove("error-message");
+                    message.classList.add("success-message");
+                    setTimeout(() => window.location.href = "login.html", 2000);
+                } else {
+                    message.textContent = result.message || "Failed to reset password.";
+                    message.classList.remove("success-message");
+                    message.classList.add("error-message");
+                }
+            } catch (err) {
+                message.textContent = "Something went wrong. Please try again.";
+                message.classList.remove("success-message");
+                message.classList.add("error-message");
+            }
         });
+    </script>
 
-        const result = await response.json();
-        if (response.ok) {
-          message.textContent = "Password updated! Redirecting to login...";
-          message.classList.remove("error-message");
-          message.classList.add("success-message");
-          setTimeout(() => window.location.href = "login.html", 2000);
-        } else {
-          message.textContent = result.message || "Failed to reset password.";
-        }
-      } catch (err) {
-        message.textContent = "Something went wrong. Please try again.";
-      }
-    });
-  </script>
 </body>
+
 </html>
