--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,133 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login - Ultramarathon Connect</title>
-    <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Login - Ultramarathon Connect</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-    <header class="sticky-header">
-        <div class="logo-container">
-            <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo" />
+  <header class="sticky-header">
+    <div class="logo-container">
+      <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo" />
+    </div>
+    <nav>
+      <ul class="menu">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="race_directory.html">Race Directory</a></li>
+        <li><a href="forum.html">Runner Community</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main class="login-wrapper">
+    <div class="login-card">
+      <h2>Login to Your Account</h2>
+      <form id="login-form">
+        <div class="form-group">
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" placeholder="Enter your email" required />
         </div>
-        <nav>
-            <ul class="menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="race_directory.html">Race Directory</a></li>
-                <li><a href="forum.html">Runner Community</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <main class="login-wrapper">
-        <div class="login-card">
-            <h2>Login to Your Account</h2>
-            <form id="login-form">
-                <div class="form-group">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" placeholder="Enter your email" required />
-                </div>
-
-                <div class="form-group">
-                    <label for="password">Password:</label>
-                    <input type="password" id="password" name="password" placeholder="Enter your password" required />
-                </div>
-
-                <button type="submit" class="orange-btn">Login</button>
-            </form>
-            <p id="login-message" class="error-message"></p>
-            <p><a href="forgot-password.html" class="forgot-password">Forgot Password?</a></p>
-            <p>Don't have an account? <a href="register.html"><strong>Create one for free!</strong></a></p>
+        <div class="form-group">
+          <label for="password">Password:</label>
+          <input type="password" id="password" name="password" placeholder="Enter your password" required />
         </div>
-    </main>
 
-    <footer class="site-footer">
-        <div class="footer-links">
-            <a href="contact.html">Contact Us</a> |
-            <a href="privacy.html">Privacy Policy</a> |
-            <a href="termsofservice.html">Terms of Service</a> |
-            <a href="faq.html">FAQ</a> |
-            <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
-        </div>
-        <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
-    </footer>
+        <button type="submit" class="orange-btn">Login</button>
+      </form>
+      <p id="login-message" class="error-message"></p>
+      <p><a href="forgot-password.html" class="forgot-password">Forgot Password?</a></p>
+      <p>Don't have an account? <a href="register.html"><strong>Create one for free!</strong></a></p>
+    </div>
+  </main>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            const token = localStorage.getItem("token");
-            const lastActive = localStorage.getItem("lastActive");
-            const now = Date.now();
+  <footer class="site-footer">
+    <div class="footer-links">
+      <a href="contact.html">Contact Us</a> |
+      <a href="privacy.html">Privacy Policy</a> |
+      <a href="termsofservice.html">Terms of Service</a> |
+      <a href="faq.html">FAQ</a> |
+      <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
+    </div>
+    <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
+  </footer>
 
-            // Auto logout after 2 hours
-            if (token && lastActive && now - parseInt(lastActive) > 2 * 60 * 60 * 1000) {
-                localStorage.removeItem("token");
-                localStorage.removeItem("profilePicture");
-                alert("You have been logged out due to inactivity.");
-                window.location.href = "login.html";
-                return;
-            }
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const token = localStorage.getItem("token");
+      const lastActive = localStorage.getItem("lastActive");
+      const now = Date.now();
 
-            localStorage.setItem("lastActive", now.toString());
+      if (token && lastActive && now - parseInt(lastActive) > 2 * 60 * 60 * 1000) {
+        localStorage.removeItem("token");
+        localStorage.removeItem("profilePicture");
+        alert("You have been logged out due to inactivity.");
+        window.location.href = "login.html";
+        return;
+      }
 
-            if (token) {
-                window.location.href = "index.html";
-            }
+      localStorage.setItem("lastActive", now.toString());
+
+      if (token) {
+        window.location.href = "index.html";
+      }
+    });
+
+    document.getElementById('login-form').addEventListener('submit', async (e) => {
+      e.preventDefault();
+
+      const email = document.getElementById('email').value.trim();
+      const password = document.getElementById('password').value.trim(); // ✅ FIXED HERE
+
+      const loginMessage = document.getElementById('login-message');
+      loginMessage.textContent = '';
+      loginMessage.className = '';
+
+      if (!email || !password) {
+        loginMessage.textContent = 'Please fill in both fields.';
+        return;
+      }
+
+      // DEBUG LOGGING
+      console.log("Raw password (string):", password);
+      const hexPassword = Array.from(new TextEncoder().encode(password))
+        .map(b => b.toString(16).padStart(2, '0')).join('');
+      console.log("Raw password (hex bytes):", hexPassword);
+
+      try {
+        const response = await fetch('https://ultramarathon-finder-backend.onrender.com/api/auth/login', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ email, password })
         });
 
-        document.getElementById('login-form').addEventListener('submit', async (e) => {
-            e.preventDefault();
-            const email = document.getElementById('email').value.trim();
-            const password = document.getElementById('password').value;
+        const data = await response.json();
 
-            const loginMessage = document.getElementById('login-message');
-            loginMessage.textContent = '';
-            loginMessage.className = '';
+        if (response.ok && data.token) {
+          localStorage.setItem('token', data.token);
+          localStorage.setItem('lastActive', Date.now().toString());
+          loginMessage.textContent = 'Login successful!';
+          loginMessage.classList.add('success-message');
 
-            if (!email || !password) {
-                loginMessage.textContent = 'Please fill in both fields.';
-                return;
-            }
-
-            // 👇 DEBUG: Log password and raw bytes
-            console.log("Raw password (string):", password);
-            const hexPassword = Array.from(new TextEncoder().encode(password))
-                .map(b => b.toString(16).padStart(2, '0'))
-                .join('');
-            console.log("Raw password (hex bytes):", hexPassword);
-
-            try {
-                const response = await fetch('https://ultramarathon-finder-backend.onrender.com/api/auth/login', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ email, password })
-                });
-
-                const data = await response.json();
-
-                if (response.ok && data.token) {
-                    localStorage.setItem('token', data.token);
-                    localStorage.setItem('lastActive', Date.now().toString());
-                    loginMessage.textContent = 'Login successful!';
-                    loginMessage.classList.add('success-message');
-
-                    setTimeout(() => {
-                        window.location.href = 'index.html';
-                    }, 1500);
-                } else {
-                    loginMessage.textContent = data.message || 'Invalid login credentials.';
-                    loginMessage.classList.add('error-message');
-                }
-            } catch (error) {
-                console.error("Login error:", error);
-                loginMessage.textContent = 'Error: Could not connect to the server.';
-                loginMessage.classList.add('error-message');
-            }
-        });
-    </script>
-
+          setTimeout(() => {
+            window.location.href = 'index.html';
+          }, 1500);
+        } else {
+          loginMessage.textContent = data.message || 'Invalid login credentials.';
+          loginMessage.classList.add('error-message');
+        }
+      } catch (error) {
+        console.error("Login error:", error);
+        loginMessage.textContent = 'Error: Could not connect to the server.';
+        loginMessage.classList.add('error-message');
+      }
+    });
+  </script>
 </body>
-
 </html>
