--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,171 +2,158 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ultramarathon Connect</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css" />
-  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ultramarathon Connect</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
 </head>
 
 <body>
-  <header class="sticky-header">
-    <div class="logo-container">
-      <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo" />
-    </div>
-    <nav>
-      <ul class="menu">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="race_directory.html">Race Directory</a></li>
-        <li><a href="forum.html">Runner Community</a></li>
-        <li id="account-tab" class="auth-tab"></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main>
-    <!-- Main Image Carousel -->
-    <div class="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="images/ultramarathon_images/download1_ultramarathon.jpeg" alt="Trail Run" />
-          <div class="carousel-overlay">
-            <h1>Welcome to Ultramarathon Connect</h1>
-            <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
-            <button onclick="window.location.href='race_directory.html'">Find a Race</button>
-          </div>
+    <header class="sticky-header">
+        <div class="logo-container">
+            <img src="ultra.png" alt="Ultramarathon Finder Logo" class="logo" />
         </div>
-        <div class="carousel-item">
-          <img src="images/ultramarathon_images/download2_ultramarathon.jpeg" alt="Mountain Trail" />
-          <div class="carousel-overlay">
-            <h1>Welcome to Ultramarathon Connect</h1>
-            <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
-            <button onclick="window.location.href='race_directory.html'">Find a Race</button>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="images/ultramarathon_images/download3_ultramarathon.jpg" alt="Forest Trail" />
-          <div class="carousel-overlay">
-            <h1>Welcome to Ultramarathon Connect</h1>
-            <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
-            <button onclick="window.location.href='race_directory.html'">Find a Race</button>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="images/ultramarathon_images/download4_ultramarathon.jpeg" alt="Desert Trail" />
-          <div class="carousel-overlay">
-            <h1>Welcome to Ultramarathon Connect</h1>
-            <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
-            <button onclick="window.location.href='race_directory.html'">Find a Race</button>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="images/ultramarathon_images/download5_ultramarathon.jpeg" alt="Snowy Trail" />
-          <div class="carousel-overlay">
-            <h1>Welcome to Ultramarathon Connect</h1>
-            <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
-            <button onclick="window.location.href='race_directory.html'">Find a Race</button>
-          </div>
-        </div>
-      </div>
-    </div>
+        <nav>
+            <ul class="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="race_directory.html">Race Directory</a></li>
+                <li><a href="forum.html">Runner Community</a></li>
+                <li id="account-tab" class="auth-tab"></li>
+            </ul>
+        </nav>
+    </header>
 
-    <!-- Race Map -->
-    <section class="map-preview">
-      <h2>Explore Upcoming Races</h2>
-      <div id="race-map"></div>
-      <button class="orange-btn" onclick="window.location.href='race_directory.html'">Browse Full Directory</button>
-    </section>
-
-    <!-- Forum Preview -->
-    <section class="latest-posts">
-      <h2>Recent Conversations</h2>
-      <div id="forum-preview-list" class="forum-preview-list"></div>
-      <button class="orange-btn" onclick="window.location.href='forum.html'">View All Posts</button>
-    </section>
-
-    <!-- Feature Boxes -->
-    <section class="features">
-      <div class="feature">
-        <h2>Find a Race</h2>
-        <p>Explore our comprehensive directory of ultramarathons by distance, location, and terrain.</p>
-        <button class="orange-btn" onclick="window.location.href='race_directory.html'">View Directory</button>
-      </div>
-      <div class="feature">
-        <h2>Runner Community</h2>
-        <p>Connect with fellow ultrarunners for training tips, race strategies, and meetups.</p>
-        <button class="orange-btn" onclick="window.location.href='forum.html'">Explore Runner Community</button>
-      </div>
-    </section>
-
-    <!-- Article Carousel -->
-    <section class="articles-section">
-      <h2>Recent Articles</h2>
-      <div class="carousel-container">
-        <button class="scroll-btn left" onclick="scrollCarousel(-1)">&#8592;</button>
-
-        <div class="article-carousel" id="articleCarousel">
-          <div class="article-card">
-            <img src="images/ultra_jan4weekend.jpg" alt="Vista View 360 runners" />
-            <h3>Ultra Recap: Jan 4–5</h3>
-            <p>Three races kicked off the year — from Florida to West Virginia trails.</p>
-            <a href="articles/ultra_weekend_jan4.html">Read More</a>
-          </div>
-          <div class="article-card">
-            <img src="images/ultra_jan11weekend.jpg" alt="Taiwan, No Hands Trail" />
-            <h3>Ultra Recap: Jan 11–12</h3>
-            <p>No Hands Trail, Miami, and Taiwan brought adventure in Week 2.</p>
-            <a href="articles/ultra_weekend_jan11.html">Read More</a>
-          </div>
-          <div class="article-card">
-            <img src="images/ultra_jan18weekend.jpg" alt="Coldwater Rumble" />
-            <h3>Ultra Recap: Jan 18–19</h3>
-            <p>Course records, snowfields, and epic performances this weekend.</p>
-            <a href="articles/ultra_weekend_jan18.html">Read More</a>
-          </div>
-          <div class="article-card">
-            <img src="images/ultra_jan25weekend.jpg" alt="Mountain Mist 50K" />
-            <h3>Ultra Recap: Jan 25–26</h3>
-            <p>From Alabama to Australia — muddy trails and big mileage.</p>
-            <a href="articles/ultra_weekend_jan25.html">Read More</a>
-          </div>
-          <div class="article-card">
-            <img src="images/ultra_feb1weekend.jpg" alt="Frozen Feb 50K" />
-            <h3>Ultra Recap: Feb 1–2</h3>
-            <p>Ice, snow, and survival at Arrowhead 135 and the Frozen Yeti.</p>
-            <a href="articles/ultra_weekend_feb1.html">Read More</a>
-          </div>
-          <div class="article-card">
-            <img src="images/ultra_may24weekend.jpg" alt="Memorial Day races" />
-            <h3>Ultra Recap: May 24–26</h3>
-            <p>Memorial Day weekend delivered PRs and course records.</p>
-            <a href="articles/ultra_weekend_may24.html">Read More</a>
-          </div>
+    <main>
+        <!-- Main Image Carousel -->
+        <div class="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="images/ultramarathon_images/download1_ultramarathon.jpeg" alt="Trail Run" />
+                    <div class="carousel-overlay">
+                        <h1>Welcome to Ultramarathon Connect</h1>
+                        <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
+                        <button onclick="window.location.href='race_directory.html'">Find a Race</button>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/ultramarathon_images/download2_ultramarathon.jpeg" alt="Mountain Trail" />
+                    <div class="carousel-overlay">
+                        <h1>Welcome to Ultramarathon Connect</h1>
+                        <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
+                        <button onclick="window.location.href='race_directory.html'">Find a Race</button>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/ultramarathon_images/download3_ultramarathon.jpg" alt="Forest Trail" />
+                    <div class="carousel-overlay">
+                        <h1>Welcome to Ultramarathon Connect</h1>
+                        <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
+                        <button onclick="window.location.href='race_directory.html'">Find a Race</button>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/ultramarathon_images/download4_ultramarathon.jpeg" alt="Desert Trail" />
+                    <div class="carousel-overlay">
+                        <h1>Welcome to Ultramarathon Connect</h1>
+                        <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
+                        <button onclick="window.location.href='race_directory.html'">Find a Race</button>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/ultramarathon_images/download5_ultramarathon.jpeg" alt="Snowy Trail" />
+                    <div class="carousel-overlay">
+                        <h1>Welcome to Ultramarathon Connect</h1>
+                        <p>Discover, prepare, and connect with ultramarathons worldwide!</p>
+                        <button onclick="window.location.href='race_directory.html'">Find a Race</button>
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <button class="scroll-btn right" onclick="scrollCarousel(1)">&#8594;</button>
-      </div>
-    </section>
-  </main>
+        <!-- Race Map -->
+        <section class="map-preview">
+            <h2>Explore Upcoming Races</h2>
+            <div id="race-map"></div>
+            <button class="orange-btn" onclick="window.location.href='race_directory.html'">Browse Full
+                Directory</button>
+        </section>
 
-  <!-- Footer -->
-  <footer class="site-footer">
-    <div class="footer-links">
-      <a href="contact.html">Contact Us</a> |
-      <a href="privacy.html">Privacy Policy</a> |
-      <a href="termsofservice.html">Terms of Service</a> |
-      <a href="faq.html">FAQ</a> |
-      <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
-    </div>
-    <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
-  </footer>
+        <!-- Forum Preview -->
+        <section class="latest-posts">
+            <h2>Recent Conversations</h2>
+            <div id="forum-preview-list" class="forum-preview-list"></div>
+            <button class="orange-btn" onclick="window.location.href='forum.html'">View All Posts</button>
+        </section>
 
-  <!-- Scripts -->
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
-  <script src="index_script.js"></script>
+        <!-- Article Carousel -->
+        <section class="articles-section">
+            <h2>Recent Articles</h2>
+            <div class="carousel-container">
+                <button class="scroll-btn left" onclick="scrollCarousel(-1)">&#8592;</button>
+
+                <div class="article-carousel" id="articleCarousel">
+                    <div class="article-card">
+                        <img src="images/ultra_jan4weekend.jpg" alt="Vista View 360 runners" />
+                        <h3>Ultra Recap: Jan 4–5</h3>
+                        <p>Three races kicked off the year — from Florida to West Virginia trails.</p>
+                        <a href="articles/ultra_weekend_jan4.html">Read More</a>
+                    </div>
+                    <div class="article-card">
+                        <img src="images/ultra_jan11weekend.jpg" alt="Taiwan, No Hands Trail" />
+                        <h3>Ultra Recap: Jan 11–12</h3>
+                        <p>No Hands Trail, Miami, and Taiwan brought adventure in Week 2.</p>
+                        <a href="articles/ultra_weekend_jan11.html">Read More</a>
+                    </div>
+                    <div class="article-card">
+                        <img src="images/ultra_jan18weekend.jpg" alt="Coldwater Rumble" />
+                        <h3>Ultra Recap: Jan 18–19</h3>
+                        <p>Course records, snowfields, and epic performances this weekend.</p>
+                        <a href="articles/ultra_weekend_jan18.html">Read More</a>
+                    </div>
+                    <div class="article-card">
+                        <img src="images/ultra_jan25weekend.jpg" alt="Mountain Mist 50K" />
+                        <h3>Ultra Recap: Jan 25–26</h3>
+                        <p>From Alabama to Australia — muddy trails and big mileage.</p>
+                        <a href="articles/ultra_weekend_jan25.html">Read More</a>
+                    </div>
+                    <div class="article-card">
+                        <img src="images/ultra_feb1weekend.jpg" alt="Frozen Feb 50K" />
+                        <h3>Ultra Recap: Feb 1–2</h3>
+                        <p>Ice, snow, and survival at Arrowhead 135 and the Frozen Yeti.</p>
+                        <a href="articles/ultra_weekend_feb1.html">Read More</a>
+                    </div>
+                    <div class="article-card">
+                        <img src="images/ultra_may24weekend.jpg" alt="Memorial Day races" />
+                        <h3>Ultra Recap: May 24–26</h3>
+                        <p>Memorial Day weekend delivered PRs and course records.</p>
+                        <a href="articles/ultra_weekend_may24.html">Read More</a>
+                    </div>
+                </div>
+
+                <button class="scroll-btn right" onclick="scrollCarousel(1)">&#8594;</button>
+            </div>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <footer class="site-footer">
+        <div class="footer-links">
+            <a href="contact.html">Contact Us</a> |
+            <a href="privacy.html">Privacy Policy</a> |
+            <a href="termsofservice.html">Terms of Service</a> |
+            <a href="faq.html">FAQ</a> |
+            <span>Email: <a href="mailto:ultramarathonconnect@gmail.com">ultramarathonconnect@gmail.com</a></span>
+        </div>
+        <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
+    </footer>
+
+    <!-- Scripts -->
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
+    <script src="index_script.js"></script>
 </body>
 
 </html>
